--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".FinalIncomeActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" ></activity>
+        <activity
+            android:name=".FinalIncomeActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
         <activity android:name=".NextIncome" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,8 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".IncomeActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+            android:name=".IncomeActivity"/>
         <activity android:name=".SplashScreen" />
         <activity android:name=".EMIActivity" />
     </application>
